# games101-solutions

./: .gitignore  README.md  pyproject.toml  requirements.txt
Assignment0/: README.md  main.py
Assignment1/: README.md  main.py
Assignment2/: README.md  main.py  transform.py
Assignment3/: README.md  _main1.py  _main2.py  main.py  transform.py
Assignment4/: README.md  main.py
Assignment5/: README.md  _main.py  main.py  models.py  renderer.py
Assignment6/: BVH.py  Material.py  Mesh.py  README.md  Renderer.py  bvh.py  common.py  main.py  model.py  renderer.py  scene.py
Assignment6/task/Assignment6/: Triangle.hpp
cpp-tasks/Homework6/Assignment6/: BVH.cpp  Bounds3.hpp
python-solutions/: README.md
python-solutions/Homework0/: README.md  main.py
python-solutions/Homework1/: README.md  common.py  main.py  renderer.py  transform.py
python-solutions/Homework2/: README.md  common.py  main.py  renderer.py  transform.py  triangle.py
python-solutions/Homework3/: README.md  camera.py  common.py  main.py  mesh.py  renderer.py  texture.py  transform.py  triangle.py
python-solutions/Homework3/in-dev/: common.py  main.py  transform.py  triangle.py
python-solutions/Homework3/old-version/: main.py
python-solutions/Homework4/: README.md  main.py
python-solutions/Homework5/: main.py  renderer.py
python-solutions/Homework6/: BVH.py  Material.py  Mesh.py  Renderer.py  Scene.py  main.py
python-solutions/Homework6/in-dev/: Material.py  Mesh.py  README.md  SahBVH.py  Sorter.py  TODOs.md  common.py  main.py  test.py
