[project]
name = "games101"
version = "0.1.0"
description = "My GAMES101 solutions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "open3d>=0.19.0",
    "opencv-python>=4.11.0.86",
    "pydantic>=2.11.7",
    "taichi>=1.7.3",
]


[[index]]
url = "https://mirrors.ustc.edu.cn/pypi/simple"
default = true


